--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta name="google-site-verification" content="ZdR8iWtr7ZZRbiCcS5XCFZ54NSkF8KQjyZDikRTOp7M" />
     <title>Peer-2-Peer Learning</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="home.css">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-E21MVX6TQ1"></script>
     <script>
@@ -27,15 +27,8 @@
             Peer-2-Peer <span class="pro-text">PRO</span>
         </div>
         <div class="nav-right">
-            <a href="index.html" class="nav-link-home">
-                <i class="fas fa-home"></i> Home
-            </a>
-            <a href="login.html">
-                <button class="auth-btn login">Login</button>
-            </a>
-            <a href="login.html">
-                <button class="auth-btn signup">Sign Up</button>
-            </a>
+            <a href="login.html"> <button class="auth-btn login">Login</button></a>
+            <a href="login.html"><button class="auth-btn signup">Sign Up</button></a>
             <span id="openNav" class="menu-toggle">☰</span>
         </div>
     </nav>
@@ -57,128 +50,294 @@
         </div>
     </section>
 
-    <!-- Advertisement Carousel Section -->
-    <section class="advertisement-section">
-        <div class="ad-container">
-            <h2 class="ad-section-title">Featured Content</h2>
-
-            <div class="ad-carousel">
-                <!-- Navigation Arrows -->
-                <button class="carousel-nav prev" onclick="changeSlide(-1)">
-                    <i class="fas fa-chevron-left"></i>
-                </button>
-
-                <!-- Slides Container -->
-                <div class="carousel-slides" id="carouselSlides">
-                    <!-- Slide 1 -->
-                    <div class="ad-slide active">
-                        <div class="ad-content">
-                            <div class="ad-image">
-                                <img src="" alt="Advertisement 1" id="adImage1">
-                            </div>
-                            <div class="ad-text">
-                                <h3>Discover Excellence</h3>
-                                <p>Join thousands of students achieving their academic goals</p>
-                                <a href="#" class="ad-cta">Learn More</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Slide 2 -->
-                    <div class="ad-slide">
-                        <div class="ad-content">
-                            <div class="ad-image">
-                                <img src="" alt="Advertisement 2" id="adImage2">
-                            </div>
-                            <div class="ad-text">
-                                <h3>Study Smarter</h3>
-                                <p>Access premium learning resources and live tutoring</p>
-                                <a href="#" class="ad-cta">Get Started</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Slide 3 -->
-                    <div class="ad-slide">
-                        <div class="ad-content">
-                            <div class="ad-image">
-                                <img src="" alt="Advertisement 3" id="adImage3">
-                            </div>
-                            <div class="ad-text">
-                                <h3>Your Success Story</h3>
-                                <p>Transform your learning experience with our platform</p>
-                                <a href="#" class="ad-cta">Join Now</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Navigation Arrows -->
-                <button class="carousel-nav next" onclick="changeSlide(1)">
-                    <i class="fas fa-chevron-right"></i>
-                </button>
+    <!-- ################## Under Grid Start ################# -->
+    <div class='under-port-container'>
+        <div class='under-portfolio'>
+            <!-- A  -->
+            <div class='under-items large'>
+                <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
+                    <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%' class='under-img'
+                        href='https://cdn.pixabay.com/photo/2019/06/13/13/06/monster-4271569_960_720.png'></image>
+                </svg>
             </div>
 
-            <!-- Carousel Indicators -->
-            <div class="carousel-indicators">
-                <span class="indicator active" onclick="goToSlide(0)"></span>
-                <span class="indicator" onclick="goToSlide(1)"></span>
-                <span class="indicator" onclick="goToSlide(2)"></span>
+            <!--   B    -->
+            <div class='under-items medium'>
+                <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
+                    <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%' class='under-img'
+                        href='https://cdn.pixabay.com/photo/2017/12/28/12/31/desktop-3045123_960_720.jpg'></image>
+                </svg>
+            </div>
+
+            <!-- C  -->
+            <div class='under-items medium'>
+                <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
+                    <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%' class='under-img'
+                        href='https://cdn.pixabay.com/photo/2019/09/14/09/44/cat-4475583_960_720.png'></image>
+                </svg>
+            </div>
+
+            <!--   D   -->
+            <div class='under-items tall'>
+                <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
+                    <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%' class='under-img'
+                        href='https://cdn.pixabay.com/photo/2014/04/03/00/35/giraffe-308771_960_720.png'></image>
+                </svg>
+            </div>
+
+            <!--  E  -->
+            <div class='under-items small'>
+                <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
+                    <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%' class='under-img'
+                        href='https://cdn.pixabay.com/photo/2018/10/02/15/18/cloud-3719093_960_720.png'></image>
+                </svg>
+            </div>
+
+            <!--    F    -->
+            <div class='under-items wide'>
+                <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
+                    <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%' class='under-img'
+                        href='https://cdn.pixabay.com/photo/2019/08/09/19/22/leaves-4395694_960_720.png'></image>
+                </svg>
+            </div>
+
+            <!--   G     -->
+            <div class='under-items wide'>
+                <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
+                    <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%' class='under-img'
+                        href='https://cdn.pixabay.com/photo/2016/01/02/16/21/girl-1118419_960_720.jpg'></image>
+                </svg>
+            </div>
+
+            <!--   H     -->
+            <div class='under-items medium'>
+                <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
+                    <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%' class='under-img'
+                        href='https://cdn.pixabay.com/photo/2020/08/02/03/33/red-fox-5456627_960_720.jpg'></image>
+                </svg>
             </div>
         </div>
-    </section>
+    </div>
 
-    <!-- Features Section -->
-    <section class="features-section">
-        <div class="features-container">
-            <h2>Why Choose Peer-2-Peer PRO?</h2>
-            <div class="features-grid">
-                <div class="feature-card">
-                    <div class="feature-icon">
-                        <i class="fas fa-graduation-cap"></i>
-                    </div>
-                    <h3>Expert Tutors</h3>
-                    <p>Learn from experienced educators and top-performing students</p>
-                </div>
 
-                <div class="feature-card">
-                    <div class="feature-icon">
-                        <i class="fas fa-video"></i>
-                    </div>
-                    <h3>Live Classes</h3>
-                    <p>Join interactive sessions in real-time from anywhere</p>
-                </div>
+    <!-- #################### Surface Grid Start #################### -->
+    <div class='port-container'>
+        <div class='items portfolio'>
+            <!-- A  -->
+            <div class='item large'>
+                <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
+                    <defs>
+                        <clipPath id='clip-0'>
+                            <circle cx='0' cy='0' fill='#000' r='150px'></circle>
+                        </clipPath>
+                    </defs>
+                    <text class='svg-text big-box' dy='.3em' x='50%' y='50%'>
+                        A
+                    </text>
+                    <g clip-path='url(#clip-0)'>
+                        <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%'
+                            href='https://cdn.pixabay.com/photo/2019/06/13/13/06/monster-4271569_960_720.png'></image>
+                    </g>
+                </svg>
+            </div>
 
-                <div class="feature-card">
-                    <div class="feature-icon">
-                        <i class="fas fa-book-open"></i>
-                    </div>
-                    <h3>Rich Resources</h3>
-                    <p>Access comprehensive study materials and past papers</p>
-                </div>
 
-                <div class="feature-card">
-                    <div class="feature-icon">
-                        <i class="fas fa-users"></i>
-                    </div>
-                    <h3>Community</h3>
-                    <p>Connect with peers and collaborate on learning</p>
-                </div>
+            <!--   B    -->
+            <div class='item medium'>
+                <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
+                    <defs>
+                        <clipPath id='clip-1'>
+                            <circle cx='0' cy='0' fill='#000' r='150px'></circle>
+                        </clipPath>
+                    </defs>
+                    <text class='svg-text' dy='.3em' x='50%' y='50%'>
+                        B
+                    </text>
+                    <g clip-path='url(#clip-1)'>
+                        <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%'
+                            href='https://cdn.pixabay.com/photo/2017/12/28/12/31/desktop-3045123_960_720.jpg'></image>
+                    </g>
+                </svg>
+            </div>
+
+            <!-- C  -->
+            <div class='item medium'>
+                <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
+                    <defs>
+                        <clipPath id='clip-2'>
+                            <circle cx='0' cy='0' fill='#000' r='150px'></circle>
+                        </clipPath>
+                    </defs>
+                    <text class='svg-text' dy='.3em' x='50%' y='50%'>
+                        C
+                    </text>
+                    <g clip-path='url(#clip-2)'>
+                        <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%'
+                            href='https://cdn.pixabay.com/photo/2019/09/14/09/44/cat-4475583_960_720.png'></image>
+                    </g>
+                </svg>
+            </div>
+
+            <!--    D    -->
+            <div class='item tall'>
+                <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
+                    <defs>
+                        <clipPath id='clip-3'>
+                            <circle cx='0' cy='0' fill='#000' r='150px'></circle>
+                        </clipPath>
+                    </defs>
+                    <text class='svg-text' dy='.3em' x='50%' y='50%'>
+                        D
+                    </text>
+                    <g clip-path='url(#clip-3)'>
+                        <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%'
+                            href='https://cdn.pixabay.com/photo/2014/04/03/00/35/giraffe-308771_960_720.png'></image>
+                    </g>
+                </svg>
+            </div>
+
+            <!--   E     -->
+            <div class='item small'>
+                <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
+                    <defs>
+                        <clipPath id='clip-4'>
+                            <circle cx='0' cy='0' fill='#000' r='150px'></circle>
+                        </clipPath>
+                    </defs>
+                    <text class='svg-text small-box' dy='.3em' x='50%' y='50%'>
+                        E
+                    </text>
+                    <g clip-path='url(#clip-4)'>
+                        <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%'
+                            href='https://cdn.pixabay.com/photo/2018/10/02/15/18/cloud-3719093_960_720.png'></image>
+                    </g>
+                </svg>
+            </div>
+
+            <!--   F   -->
+            <div class='item wide'>
+                <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
+                    <defs>
+                        <clipPath id='clip-5'>
+                            <circle cx='0' cy='0' fill='#000' r='150px'></circle>
+                        </clipPath>
+                    </defs>
+                    <text class='svg-text' dy='.3em' x='50%' y='50%'>
+                        F
+                    </text>
+                    <g clip-path='url(#clip-5)'>
+                        <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%'
+                            href='https://cdn.pixabay.com/photo/2019/08/09/19/22/leaves-4395694_960_720.png'></image>
+                    </g>
+                </svg>
+            </div>
+
+            <!-- G -->
+            <div class='item wide'>
+                <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
+                    <defs>
+                        <clipPath id='clip-6'>
+                            <circle cx='0' cy='0' fill='#000' r='150px'></circle>
+                        </clipPath>
+                    </defs>
+                    <text class='svg-text' dy='.3em' x='50%' y='50%'>
+                        G
+                    </text>
+                    <g clip-path='url(#clip-6)'>
+                        <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%'
+                            href='https://cdn.pixabay.com/photo/2016/01/02/16/21/girl-1118419_960_720.jpg'></image>
+                    </g>
+                </svg>
+            </div>
+
+            <!-- H -->
+            <div class='item medium'>
+                <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
+                    <defs>
+                        <clipPath id='clip-7'>
+                            <circle cx='0' cy='0' fill='#000' r='150px'></circle>
+                        </clipPath>
+                    </defs>
+                    <text class='svg-text' dy='.3em' x='50%' y='50%'>
+                        H
+                    </text>
+                    <g clip-path='url(#clip-7)'>
+                        <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%'
+                            href='https://cdn.pixabay.com/photo/2020/08/02/03/33/red-fox-5456627_960_720.jpg'></image>
+                    </g>
+                </svg>
             </div>
         </div>
-    </section>
+    </div>
 
-    <script src="script.js"></script>
-    <!-- Font Awesome for Icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script>
+        var items = [],
+            point = document.querySelector("svg").createSVGPoint();
 
+        function getCoordinates(e, svg) {
+            point.x = e.clientX;
+            point.y = e.clientY;
+            return point.matrixTransform(svg.getScreenCTM().inverse());
+        }
+
+        function changeColor(e) {
+            document.body.className = e.currentTarget.className;
+        }
+
+        function Item(config) {
+            Object.keys(config).forEach(function (item) {
+                this[item] = config[item];
+            }, this);
+            this.el.addEventListener("mousemove", this.mouseMoveHandler.bind(this));
+            this.el.addEventListener("touchmove", this.touchMoveHandler.bind(this));
+        }
+
+        Item.prototype = {
+            update: function update(c) {
+                this.clip.setAttribute("cx", c.x);
+                this.clip.setAttribute("cy", c.y);
+            },
+            mouseMoveHandler: function mouseMoveHandler(e) {
+                this.update(getCoordinates(e, this.svg));
+            },
+            touchMoveHandler: function touchMoveHandler(e) {
+                e.preventDefault();
+                var touch = e.targetTouches[0];
+                if (touch) return this.update(getCoordinates(touch, this.svg));
+            }
+        };
+
+        [].slice
+            .call(document.querySelectorAll(".item"), 0)
+            .forEach(function (item, index) {
+                items.push(
+                    new Item({
+                        el: item,
+                        svg: item.querySelector("svg"),
+                        clip: document.querySelector("#clip-" + index + " circle")
+                    })
+                );
+            });
+
+        // Side menu functionality
+        document.getElementById("openNav").onclick = function () {
+            document.getElementById("side-menu").style.width = "250px";
+        };
+
+        document.getElementById("closeNav").onclick = function () {
+            document.getElementById("side-menu").style.width = "0";
+        };
+    </script>
     <footer class="footer">
         <div class="footer-inner">
+
             <div class="footer-box">
                 <h4>Contact</h4>
                 <p>Email Support</p>
                 <p style="margin-top:12px;">Tutor Applications</p>
-                <a href="mailto:hr@peer-2-peer.co.za">admin@peer-2-peer.co.za</a>
+                <a href="/cdn-cgi/l/email-protection#472f3507372222356a756a37222235692428693d26"><span
+                        class="__cf_email__"
+                        data-cfemail="bfdedbd2d6d1ffcfdadacd928d92cfdadacd91dcd091c5de">[email&#160;protected]</span></a>
             </div>
             <div class="footer-box">
                 <h4>Quick Links</h4>
@@ -186,13 +345,5 @@
                 <a href="https://wa.me/27732792426">WhatsApp Us</a>
                 <a href="resources.html">Resources</a>
             </div>
+
         </div>
-
-        <div class="footer-bottom">
-            <p>© 2026 Peer-2-Peer PRO. All rights reserved.</p>
-        </div>
-    </footer>
-
-</body>
-
-</html>
