--- a/resources-new.html
+++ b/resources-new.html
@@ -1024,55 +1024,15 @@
                     <label for="fileSubject"><i class="fas fa-book"></i> Subject</label>
                     <select id="fileSubject" class="form-control" required>
                         <option value="">-- Select Subject --</option>
-                        <option value="accounting">Accounting</option>
-                        <option value="afrikaans">Afrikaans</option>
-                        <option value="agricultural management practices">Agricultural Management Practices</option>
-                        <option value="agricultural science">Agricultural Science</option>
-                        <option value="agricultural technology">Agricultural Technology</option>
-                        <option value="business">Business Studies</option>
-                        <option value="cat">CAT</option>
-                        <option value="civil technology">Civil Technology</option>
-                        <option value="computer applications technology">Computer Applications Technology</option>
-                        <option value="consumer studies">Consumer Studies</option>
-                        <option value="dance studies">Dance Studies</option>
-                        <option value="design">Design</option>
-                        <option value="development studies">Development Studies</option>
-                        <option value="dramatic arts">Dramatic Arts</option>
-                        <option value="economic and management sciences">Economic and Management Sciences</option>
-                        <option value="economics">Economics</option>
-                        <option value="electrical technology">Electrical Technology</option>
-                        <option value="engineering graphics and design">Engineering Graphics and Design</option>
-                        <option value="english">English</option>
-                        <option value="equine studies">Equine Studies</option>
-                        <option value="geography">Geography</option>
-                        <option value="history">History</option>
-                        <option value="hospitality studies">Hospitality Studies</option>
-                        <option value="isindebele">IsiNdebele</option>
-                        <option value="isixhosa">IsiXhosa</option>
-                        <option value="isizulu">IsiZulu</option>
-                        <option value="it">IT</option>
-                        <option value="life orientation">Life Orientation</option>
-                        <option value="life_science">Life Science</option>
-                        <option value="marine sciences">Marine Sciences</option>
-                        <option value="maritime economics">Maritime Economics</option>
-                        <option value="mathematics">Mathematics</option>
-                        <option value="math_lit">Math Lit</option>
-                        <option value="mechanical technology">Mechanical Technology</option>
-                        <option value="music">Music</option>
-                        <option value="nautical science">Nautical Science</option>
-                        <option value="physics">Physics</option>
-                        <option value="religion studies">Religion Studies</option>
-                        <option value="sepedi">Sepedi</option>
-                        <option value="sesotho">Sesotho</option>
-                        <option value="setswana">Setswana</option>
-                        <option value="siswati">Siswati</option>
-                        <option value="sport and exercise science">Sport and Exercise Science</option>
-                        <option value="technical maths">Technical Maths</option>
-                        <option value="technical sciences">Technical Sciences</option>
-                        <option value="tourism">Tourism</option>
-                        <option value="tshivenda">Tshivenda</option>
-                        <option value="visual arts">Visual Arts</option>
-                        <option value="xitsonga">Xitsonga</option>
+                        <option value="Mathematics">📐 Mathematics</option>
+                        <option value="Physical Science">🔬 Physical Science</option>
+                        <option value="Life Sciences">🧬 Life Sciences</option>
+                        <option value="English">📚 English</option>
+                        <option value="Afrikaans">🇿🇦 Afrikaans</option>
+                        <option value="Accounting">💰 Accounting</option>
+                        <option value="Economics">📊 Economics</option>
+                        <option value="Geography">🌍 Geography</option>
+                        <option value="History">📜 History</option>
                     </select>
                 </div>
 
@@ -1080,18 +1040,12 @@
                     <label for="fileGrade"><i class="fas fa-graduation-cap"></i> Grade Level</label>
                     <select id="fileGrade" class="form-control" required>
                         <option value="">-- Select Grade --</option>
-                        <option value="1">Grade 1</option>
-                        <option value="2">Grade 2</option>
-                        <option value="3">Grade 3</option>
-                        <option value="4">Grade 4</option>
-                        <option value="5">Grade 5</option>
-                        <option value="6">Grade 6</option>
-                        <option value="7">Grade 7</option>
-                        <option value="8">Grade 8</option>
-                        <option value="9">Grade 9</option>
-                        <option value="10">Grade 10</option>
-                        <option value="11">Grade 11</option>
-                        <option value="12">Grade 12</option>
+                        <option value="Grade 8">Grade 8</option>
+                        <option value="Grade 9">Grade 9</option>
+                        <option value="Grade 10">Grade 10</option>
+                        <option value="Grade 11">Grade 11</option>
+                        <option value="Grade 12">Grade 12</option>
+                        <option value="University">University</option>
                     </select>
                 </div>
 
@@ -1109,12 +1063,12 @@
                     <label for="docType"><i class="fas fa-file-alt"></i> Document Type</label>
                     <select id="docType" class="form-control" required>
                         <option value="">-- Select Type --</option>
-                        <option value="notes"> Notes</option>
-                        <option value="worksheet"> Worksheet</option>
-                        <option value="past_paper"> Past Paper</option>
-                        <option value="memo"> Memo/Solutions</option>
-                        <option value="study_guide"> Study Guide</option>
-                        <option value="presentation"> Presentation</option>
+                        <option value="notes">📝 Notes</option>
+                        <option value="worksheet">📄 Worksheet</option>
+                        <option value="past_paper">📋 Past Paper</option>
+                        <option value="memo">✅ Memo/Solutions</option>
+                        <option value="study_guide">📘 Study Guide</option>
+                        <option value="presentation">📊 Presentation</option>
                     </select>
                 </div>
 
@@ -1157,55 +1111,11 @@
                     <label for="subjectFilter"><i class="fas fa-book"></i> Subject</label>
                     <select id="subjectFilter" class="form-control">
                         <option value="all">All Subjects</option>
-                        <option value="accounting">Accounting</option>
-                        <option value="afrikaans">Afrikaans</option>
-                        <option value="agricultural management practices">Agricultural Management Practices</option>
-                        <option value="agricultural science">Agricultural Science</option>
-                        <option value="agricultural technology">Agricultural Technology</option>
-                        <option value="business">Business Studies</option>
-                        <option value="cat">CAT</option>
-                        <option value="civil technology">Civil Technology</option>
-                        <option value="computer applications technology">Computer Applications Technology</option>
-                        <option value="consumer studies">Consumer Studies</option>
-                        <option value="dance studies">Dance Studies</option>
-                        <option value="design">Design</option>
-                        <option value="development studies">Development Studies</option>
-                        <option value="dramatic arts">Dramatic Arts</option>
-                        <option value="economic and management sciences">Economic and Management Sciences</option>
-                        <option value="economics">Economics</option>
-                        <option value="electrical technology">Electrical Technology</option>
-                        <option value="engineering graphics and design">Engineering Graphics and Design</option>
-                        <option value="english">English</option>
-                        <option value="equine studies">Equine Studies</option>
-                        <option value="geography">Geography</option>
-                        <option value="history">History</option>
-                        <option value="hospitality studies">Hospitality Studies</option>
-                        <option value="isindebele">IsiNdebele</option>
-                        <option value="isixhosa">IsiXhosa</option>
-                        <option value="isizulu">IsiZulu</option>
-                        <option value="it">IT</option>
-                        <option value="life orientation">Life Orientation</option>
-                        <option value="life_science">Life Science</option>
-                        <option value="marine sciences">Marine Sciences</option>
-                        <option value="maritime economics">Maritime Economics</option>
-                        <option value="mathematics">Mathematics</option>
-                        <option value="math_lit">Math Lit</option>
-                        <option value="mechanical technology">Mechanical Technology</option>
-                        <option value="music">Music</option>
-                        <option value="nautical science">Nautical Science</option>
-                        <option value="physics">Physics</option>
-                        <option value="religion studies">Religion Studies</option>
-                        <option value="sepedi">Sepedi</option>
-                        <option value="sesotho">Sesotho</option>
-                        <option value="setswana">Setswana</option>
-                        <option value="siswati">Siswati</option>
-                        <option value="sport and exercise science">Sport and Exercise Science</option>
-                        <option value="technical maths">Technical Maths</option>
-                        <option value="technical sciences">Technical Sciences</option>
-                        <option value="tourism">Tourism</option>
-                        <option value="tshivenda">Tshivenda</option>
-                        <option value="visual arts">Visual Arts</option>
-                        <option value="xitsonga">Xitsonga</option>
+                        <option value="Mathematics">Mathematics</option>
+                        <option value="Physical Science">Physical Science</option>
+                        <option value="Life Sciences">Life Sciences</option>
+                        <option value="English">English</option>
+                        <option value="Accounting">Accounting</option>
                     </select>
                 </div>
 
@@ -1213,18 +1123,11 @@
                     <label for="gradeFilter"><i class="fas fa-graduation-cap"></i> Grade</label>
                     <select id="gradeFilter" class="form-control">
                         <option value="all">All Grades</option>
-                        <option value="1">Grade 1</option>
-                        <option value="2">Grade 2</option>
-                        <option value="3">Grade 3</option>
-                        <option value="4">Grade 4</option>
-                        <option value="5">Grade 5</option>
-                        <option value="6">Grade 6</option>
-                        <option value="7">Grade 7</option>
-                        <option value="8">Grade 8</option>
-                        <option value="9">Grade 9</option>
-                        <option value="10">Grade 10</option>
-                        <option value="11">Grade 11</option>
-                        <option value="12">Grade 12</option>
+                        <option value="Grade 8">Grade 8</option>
+                        <option value="Grade 9">Grade 9</option>
+                        <option value="Grade 10">Grade 10</option>
+                        <option value="Grade 11">Grade 11</option>
+                        <option value="Grade 12">Grade 12</option>
                     </select>
                 </div>
 
