fix study planner link to create profile

--- a/tutor-portal.html
+++ b/tutor-portal.html
@@ -66,14 +66,10 @@
                 <p>Create your own personalized documents for your lessons.</p>
             </div>
             <!-- Add this card to tutor-portal.html -->
-            <div class="card" id="tutorProfileCard">
-                <div class="card-header">
-                    <h3>
-                        <i class="fas fa-user-graduate"></i> Tutor Profile
-                        <span id="profileStatusDot" class="status-dot"></span>
-                    </h3>
-                </div>
+            <div class="dah-card" id="tutorProfileCard" onclick="window.location.href='tutor-profile-setup.html'">
+                <div class="card-icon"><i class="fas fa-chalkboard-teacher"></i></div>
                 <div class="card-body">
+                    <h3>Tutor Profile</h3>
                     <p id="profileStatusText">Complete your tutor profile to start receiving bookings</p>
                 </div>
             </div>
